--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "express-oauth2-jwt-bearer": "^1.1.0",
+    "express-openid-connect": "^2.8.0",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4"
   }
