--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-openid-connect": "^2.8.0",
     "jose": "^4.8.3",
-    "jwks-rsa": "^2.1.4"
+    "jwks-rsa": "^2.1.4",
+    "pg": "^8.7.3"
   }
 }
