--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^7.7.5",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-openid-connect": "^2.8.0",
+    "express-promise-router": "^4.1.1",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4",
     "pg": "^8.7.3"
