refactor: move category and asset files to allocation folder to improve code organization

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ DATABASEUSER=asset_management
 DATABASE=asset_management
 PORT=5432
 PASSWORD=p2o5.h2so4
+DATABASEUSER2=assetmanagement2
+DATABASE2=assetmanagement2
