--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "mocha",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
@@ -28,6 +28,7 @@
     "express-promise-router": "^4.1.1",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.7.3"
   }
 }
