--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "nodemon --exec 'mocha'",
+    "test": "export NODE_ENV=test && nodemon --exec 'mocha'",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
     "start": "nodemon app.js"
   },
