--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "sinon": "^15.0.1"
   },
   "dependencies": {
+    "@apollo/server": "^4.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-openid-connect": "^2.8.0",
     "express-promise-router": "^4.1.1",
+    "graphql": "^16.6.0",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4",
     "multer": "^1.4.5-lts.1",
