--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "export NODE_ENV=test && mocha",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
-    "start": "nodemon app.js"
+    "start": "npx nodemon node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
