--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "export NODE_ENV=test && mocha",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
-    "start": "npx nodemon node index.js"
+    "start": "npx nodemon node index.js",
+    "test-windows": "set NODE_ENV=windows && mocha",
+    "debug": "npx nodemon 'set NODE_ENV=windows && mocha'"
   },
   "keywords": [],
   "author": "",
