--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
     "start": "npx nodemon node index.js",
     "test-windows": "set NODE_ENV=windows && mocha",
-    "debug": "npx nodemon 'set NODE_ENV=windows && mocha'"
+    "debug": "npx nodemon 'set NODE_ENV=windows && mocha'",
+    "graphql": "npx nodemon graphql_server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.19",
     "nyc": "^15.1.0",
@@ -30,7 +33,6 @@
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-openid-connect": "^2.8.0",
     "express-promise-router": "^4.1.1",
-    "graphql": "^16.6.0",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4",
     "multer": "^1.4.5-lts.1",
