--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "export NODE_ENV=test && mocha",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
-    "start": "npx nodemon node index.js",
+    "start": "npx nodemon node app.js",
     "test-windows": "set NODE_ENV=windows && mocha",
-    "debug": "npx nodemon 'set NODE_ENV=windows && mocha'"
+    "debug": "npx nodemon 'set NODE_ENV=windows && mocha'",
+    "other_test": "npx nodemon --exec 'mocha'"
   },
   "keywords": [],
   "author": "",
