--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-oauth2-jwt-bearer": "^1.1.0",
     "express-openid-connect": "^2.8.0",
     "express-promise-router": "^4.1.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.6.0",
     "jose": "^4.8.3",
     "jwks-rsa": "^2.1.4",
