--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DATABASEUSER=asset_management
 DATABASE=asset_management
 PORT=5432
 PASSWORD=p2o5.h2so4
+TOKEN_SECRET=3mZNwJXVwEynTL0f6FvW
 
 TESTDATABASEUSER=assetManagementTest
 TESTDATABASE=assetManagementTest
