--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "export NODE_ENV=test && mocha",
     "coverage": "nyc --reporter=lcov --reporter=text npm run test",
     "start": "npx nodemon node app.js",
+    "start-windows": "npx nodemon 'set NODE_ENV=windows node app.js'",
     "start-dev": "export NODE_ENV=test && npx nodemon node app.js",
     "test-windows": "set NODE_ENV=windows && mocha",
     "debug": "npx nodemon 'set NODE_ENV=windows && mocha'",
