--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/mocha": "^10.0.1",
     "@types/pg": "^8.10.2",
     "@types/sinon": "^10.0.15",
