--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@apollo/server": "^4.4.0",
+    "@types/lodash": "^4.14.195",
+    "@types/node-schedule": "^2.1.0",
     "bcrypt": "^5.1.0",
     "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
@@ -46,7 +48,9 @@
     "jose": "^4.8.3",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^2.1.4",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "pg": "^8.7.3"
   }
 }
