--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "socket.io": "^4.7.1",
+    "ws": "^8.13.0"
   }
 }
