--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mocha": "^10.2.0",
     "nodemon": "^2.0.19",
     "nyc": "^15.1.0",
-    "sinon": "^15.0.1"
+    "sinon": "^15.0.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@apollo/server": "^4.4.0",
