--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@apollo/server": "^4.4.0",
     "@types/lodash": "^4.14.195",
+    "@types/multer": "^1.4.7",
     "@types/node-schedule": "^2.1.0",
     "bcrypt": "^5.1.0",
     "convert-array-to-csv": "^2.0.0",
