--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/lodash": "^4.14.195",
     "@types/multer": "^1.4.7",
     "@types/node-schedule": "^2.1.0",
+    "@types/xlsx": "^0.0.36",
     "bcrypt": "^5.1.0",
     "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
@@ -57,6 +58,7 @@
     "node-schedule": "^2.1.1",
     "pg": "^8.7.3",
     "socket.io": "^4.7.1",
-    "ws": "^8.13.0"
+    "ws": "^8.13.0",
+    "xlsx": "^0.18.5"
   }
 }
