--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express-ws": "^3.0.1",
     "@types/mocha": "^10.0.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/pg": "^8.10.2",
     "@types/sinon": "^10.0.15",
     "chai": "^4.3.7",
@@ -56,6 +57,7 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.7",
     "pg": "^8.7.3",
     "socket.io": "^4.7.1",
     "ws": "^8.13.0",
