--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jwks-rsa": "^2.1.4",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "node-lmdb": "^0.10.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.7.3",
