--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^2.0.19",
     "nyc": "^15.1.0",
     "sinon": "^15.0.1",
+    "tsx": "^4.16.2",
     "typescript": "^5.1.6"
   },
   "dependencies": {
