--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcrypt": "^5.1.0",
     "convert-array-to-csv": "^2.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-jwt": "^7.7.5",
@@ -55,10 +56,12 @@
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^2.1.4",
     "lodash": "^4.17.21",
+    "mongodb": "^6.8.0",
     "multer": "^1.4.5-lts.1",
     "node-lmdb": "^0.10.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
+    "openai": "^4.57.1",
     "pg": "^8.7.3",
     "socket.io": "^4.7.1",
     "ws": "^8.13.0",
